# tarsouille

./: script test.txt
app/: CMakeLists.txt
app/tarstest1/: CMakeLists.txt  tarstest1.c  tarstest1.cpp  tarstest1.h
